2005-05-12  Sven Neumann  <sven@gimp.org>

	* app/config/gimpguiconfig.[ch]
	* app/config/gimprc-blurbs.h: added new gimprc option
	"transient-docks".
	
	* app/widgets/gimpimagedock.c (gimp_image_dock_display_changed):
	as an experiment
	, obey the "transient-docks" preference and set
	the dock window transient to the active display shell. Please
	comment on the behaviour you observe.

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): added a
	view on the new gimprc property.

	* app/config/gimpguiconfig.[ch]: set the IGNORE flag on the
	"info-window-per-display" property; it isn't used any longer.

	* app/config/gimpconfig-dump.c (dump_gimprc_system): don't dump
	properties that have the GIMP_CONFIG_PARAM_IGNORE flag set.

2005-05-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_query): split the message into
	primary and secondary label.

2005-05-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_find_action): allow
	to pass a NULL group_name and iterate all action groups to find
	the action in that case.

	* app/widgets/gimpcontrollereditor.c: show the action's stock icon
	in the "Action" column, using above function.

2005-05-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplay.c: added a read-only property to access
	the display-shell w/o having to include gimpdisplay.h.

2005-05-11  Michael Natterer  <mitch@gimp.org>

	Some dock refactoring which separates the docking logic from
	active image and UI manager stuff:

	* app/widgets/gimpmenudock.[ch]: new widget renamed from
	GimpImageDock, zero changes except the name change.

	* app/widgets/gimpimagedock.[ch]: new widget derived from
	GimpDock. Keeps the UI manager.

	* app/widgets/gimpdock.[ch]: removed the UI manager. GimpDock only
	contains the basic docking logic again.

	* app/widgets/gimpmenudock.[ch]
	* app/widgets/gimptoolbox.[ch]: derive them from GimpImageDock.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h